--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   margin: 0%;
   padding: 0%;
   width: 100vw;
-  background: rgb(10, 10, 10);
+  background: #0D1117;
   background: var(--bg-color);
   color: #fff;
   color: var(--text-color);
